--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
     flex-direction: column;
     margin-top: 100px;
 }
+.wrap-all {
+    color: #fff;
+    font-size: 2rem;
+}
 .play-time {
     font-size: 3rem;
     margin-top: 2rem;
@@ -56,7 +60,8 @@ li {
 .game-text {
     position: absolute;
     font-size: 45px;
-    color: #67c23e;
+    font-weight: bold;
+    color: #DF4954;
     text-shadow: 1px 1px rgba(0,0,0,0.5);
     display: none;
 }
